2006-04-16  Gary Cramblitt <garycramblitt@comcast.net>

	* doc/ssip.texi: Clarify module_pause(), module_stop(), and module_report_*.

	* src/modules/ibmtts.c: Rework stop and pause logic.  You cannot call
	module_report_* from within a modules_stop() or module_pause call.

	* src/tests/stop_and_pause.test: Minor changes.

2006-04-12  Gary Cramblitt <garycramblitt@comcast.net>

	* src/modules/ibmtts.c:
	* config/modules/ibmtts.conf: Key substitution for IBM TTS.

	* src/tests/keys.test: Test script for keys.

2006-04-11  Gary Cramblitt <garycramblitt@comcast.net>

	* src/tests/run_test.c: Add "wait for <str>" operator.  Useful for waiting
	for event notifications.

	* src/tests/README: Document "wait for".

	* src/tests/stop_and_pause.test: Use "wait for".

	* doc/ssip.texi: Minor correction for CANCEL notification.

2006-04-10  Gary Cramblitt <garycramblitt@comcast.net>

	* src/c/clients/say/say.c, options.h, options.c:
	* doc/spd-say.texi: Add --ssml (-x) option for speaking SSML text.

	* config/modules/ibmtts.conf:
	* config/speechd.conf.in:
	* src/modules/ibmtts.c, Makefile.am: 
	* src/configure.in.in: New output module for IBM TTS synthesizer.
	It compiles and even speaks, but don't expect much else right now.

	* src/modules/module_utils.c, src/c/api/libspeechd.c: Remove do
	nothing statement in xfree().

	* src/tests/basic.test: Minor spelling and grammar corrections.

	* src/tests/ssml.test: Start on new SSML test script.

	* src/tests/stop_and_pause.test: A script for testing STOP and PAUSE functions.

	* doc/speech-dispatcher.texi: Corrections and clarifications.

2006-04-10  Hynek Hanke  <hanke@chopin>

	* COPYING: Added GNU Lesser General Public License.

	* src/modules/module_utils.c: Relicensed to GNU Lesser General
	Public License

	* src/modules/module_utils.h: Relicensed to GNU Lesser
	General Public License

	* src/modules/module_utils_addvoice.c: Relicensed to GNU Lesser
	General Public License
