@@ -172,46 +172,47 @@ IbmttsDialect "StandardThaiTIS"              "00110000"
 # Maps Speech Dispatcher key names used in SSIP KEY commands to speakable words.
 # The string in the "SD Key" column occurring anywhere in a KEY command
 # is replaced with the string in "Spoken".  The substitutions occur in the
-# order listed.
+# order listed.  "Lang" determines which language the substitution applies
+# to.
 
-#                     SD Key      Spoken
-#                     ----------- -----------
-IbmttsKeySubstitution "kp--"      "keypad minus "
-IbmttsKeySubstitution "kp-"       "keypad "
-IbmttsKeySubstitution "_"         " "
-IbmttsKeySubstitution "#"         "pound "
-IbmttsKeySubstitution "&"         "ampersand "
-IbmttsKeySubstitution "!"         "exclamation mark "
-IbmttsKeySubstitution "¦"         "pipe "
-IbmttsKeySubstitution "¤"         "currency "
-IbmttsKeySubstitution "Ø"         "capital phi "
-IbmttsKeySubstitution "ø"         "phi "
-IbmttsKeySubstitution "ÿ"         "yummel "
-IbmttsKeySubstitution "­"         "dash "
-IbmttsKeySubstitution "A"         "capital A "
-IbmttsKeySubstitution "B"         "capital B "
-IbmttsKeySubstitution "C"         "capital C "
-IbmttsKeySubstitution "D"         "capital D "
-IbmttsKeySubstitution "E"         "capital E "
-IbmttsKeySubstitution "F"         "capital F "
-IbmttsKeySubstitution "G"         "capital G "
-IbmttsKeySubstitution "H"         "capital H "
-IbmttsKeySubstitution "I"         "capital I "
-IbmttsKeySubstitution "J"         "capital J "
-IbmttsKeySubstitution "K"         "capital K "
-IbmttsKeySubstitution "L"         "capital L "
-IbmttsKeySubstitution "M"         "capital M "
-IbmttsKeySubstitution "N"         "capital N "
-IbmttsKeySubstitution "O"         "capital O "
-IbmttsKeySubstitution "P"         "capital P "
-IbmttsKeySubstitution "Q"         "capital Q "
-IbmttsKeySubstitution "R"         "capital R "
-IbmttsKeySubstitution "S"         "capital S "
-IbmttsKeySubstitution "T"         "capital T "
-IbmttsKeySubstitution "U"         "capital U "
-IbmttsKeySubstitution "V"         "capital V "
-IbmttsKeySubstitution "W"         "capital W "
-IbmttsKeySubstitution "X"         "capital X "
-IbmttsKeySubstitution "Y"         "capital Y "
-IbmttsKeySubstitution "Z"         "capital Z "
+#                     Lang  SD Key      Spoken
+#                     ----  ----------- -----------
+IbmttsKeySubstitution "en"  "kp--"      "keypad minus "
+IbmttsKeySubstitution "en"  "kp-"       "keypad "
+IbmttsKeySubstitution "en"  "_"         " "
+IbmttsKeySubstitution "en"  "#"         "pound "
+IbmttsKeySubstitution "en"  "&"         "ampersand "
+IbmttsKeySubstitution "en"  "!"         "exclamation mark "
+IbmttsKeySubstitution "en"  "¦"         "pipe "
+IbmttsKeySubstitution "en"  "¤"         "currency "
+IbmttsKeySubstitution "en"  "Ø"         "capital phi "
+IbmttsKeySubstitution "en"  "ø"         "phi "
+IbmttsKeySubstitution "en"  "ÿ"         "yummel "
+IbmttsKeySubstitution "en"  "­"         "dash "
+IbmttsKeySubstitution "en"  "A"         "capital A "
+IbmttsKeySubstitution "en"  "B"         "capital B "
+IbmttsKeySubstitution "en"  "C"         "capital C "
+IbmttsKeySubstitution "en"  "D"         "capital D "
+IbmttsKeySubstitution "en"  "E"         "capital E "
+IbmttsKeySubstitution "en"  "F"         "capital F "
+IbmttsKeySubstitution "en"  "G"         "capital G "
+IbmttsKeySubstitution "en"  "H"         "capital H "
+IbmttsKeySubstitution "en"  "I"         "capital I "
+IbmttsKeySubstitution "en"  "J"         "capital J "
+IbmttsKeySubstitution "en"  "K"         "capital K "
+IbmttsKeySubstitution "en"  "L"         "capital L "
+IbmttsKeySubstitution "en"  "M"         "capital M "
+IbmttsKeySubstitution "en"  "N"         "capital N "
+IbmttsKeySubstitution "en"  "O"         "capital O "
+IbmttsKeySubstitution "en"  "P"         "capital P "
+IbmttsKeySubstitution "en"  "Q"         "capital Q "
+IbmttsKeySubstitution "en"  "R"         "capital R "
+IbmttsKeySubstitution "en"  "S"         "capital S "
+IbmttsKeySubstitution "en"  "T"         "capital T "
+IbmttsKeySubstitution "en"  "U"         "capital U "
+IbmttsKeySubstitution "en"  "V"         "capital V "
+IbmttsKeySubstitution "en"  "W"         "capital W "
+IbmttsKeySubstitution "en"  "X"         "capital X "
+IbmttsKeySubstitution "en"  "Y"         "capital Y "
+IbmttsKeySubstitution "en"  "Z"         "capital Z "
 
